crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__backspace_alias.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..15,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..15,
                value: StringLiteral(
                    ExprStringLiteral {
                        node_index: NodeIndex(None),
                        range: 0..15,
                        value: StringLiteralValue {
                            inner: Single(
                                StringLiteral {
                                    range: 0..15,
                                    node_index: NodeIndex(None),
                                    value: "\u{8}",
                                    flags: StringLiteralFlags {
                                        quote_style: Double,
                                        prefix: Empty,
                                        triple_quoted: false,
                                        unclosed: false,
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
