crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__dont_panic_on_8_in_octal_escape.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..16,
    node_index: NodeIndex(None),
    statements: [
        Assign(
            StmtAssign {
                node_index: NodeIndex(None),
                range: 0..16,
                targets: [
                    Name(
                        ExprName {
                            node_index: NodeIndex(None),
                            range: 0..4,
                            id: Name("bold"),
                            ctx: Store,
                        },
                    ),
                ],
                value: StringLiteral(
                    ExprStringLiteral {
                        node_index: NodeIndex(None),
                        range: 7..16,
                        value: StringLiteralValue {
                            inner: Single(
                                StringLiteral {
                                    range: 7..16,
                                    node_index: NodeIndex(None),
                                    value: "\u{3}8[1m",
                                    flags: StringLiteralFlags {
                                        quote_style: Single,
                                        prefix: Empty,
                                        triple_quoted: false,
                                        unclosed: false,
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
