crates/ruff_python_parser/src/snapshots/ruff_python_parser__string__tests__escape_octet.snap
---
source: crates/ruff_python_parser/src/string.rs
expression: suite
---
Suite {
    range: 0..14,
    node_index: NodeIndex(None),
    statements: [
        Expr(
            StmtExpr {
                node_index: NodeIndex(None),
                range: 0..14,
                value: BytesLiteral(
                    ExprBytesLiteral {
                        node_index: NodeIndex(None),
                        range: 0..14,
                        value: BytesLiteralValue {
                            inner: Single(
                                BytesLiteral {
                                    range: 0..14,
                                    node_index: NodeIndex(None),
                                    value: [
                                        35,
                                        97,
                                        4,
                                        83,
                                        52,
                                    ],
                                    flags: BytesLiteralFlags {
                                        quote_style: Single,
                                        prefix: Regular,
                                        triple_quoted: false,
                                        unclosed: false,
                                    },
                                },
                            ),
                        },
                    },
                ),
            },
        ),
    ],
}
